Fix a horizontal scroll bar showing when rotated cards are dragged to the edge

--- a/components/CardTable/styles.module.scss
+++ b/components/CardTable/styles.module.scss
@@ -2,6 +2,7 @@
   background: #191919;
   padding-top: 10rem;
   padding-bottom: 10rem;
+  overflow: hidden;
 }
 
 .worship_stick {
